Update file extensions for Navbar, Footer, and MainBody components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://amr-3009.github.io/parent-meeting-website",
+  "homepage": ".",
   "name": "parent-meeting-website",
   "version": "0.1.0",
   "private": true,
